--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Piyush Mehta <me@piyushmehta.com>",
   "dependencies": {
     "axios": "^0.19.2",
+    "countries-list": "^2.5.4",
     "gatsby": "^2.19.43",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-react-leaflet": "2.0.12",
